continue work on planner pseudocode